--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
+    "esbuild": "^0.23.1",
     "isbot": "^3.6.8",
+    "mdx-bundler": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,7 +25,10 @@
     "@remix-run/eslint-config": "^2.2.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.1.6"
   },
   "engines": {
