✨ Stubbed out the link submit page, set up Prisma

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,11 @@
     "titleBar.activeForeground": "#FFFAF4"
   },
   "cSpell.words": [
+    "favorited",
     "frontmatter",
     "icterine",
     "rehype",
-    "signup"
+    "signup",
+    "SUPABASE"
   ]
 }
